modules/web/js/tests/resources/parser/invalidSyntax/SemicolonMissingMainFunc.bal
package samples.parser.invalidSyntax;

function main(string[] str) {

	// Following line is invalid.
	int b
	reply m;
}
